examples/test/testpolicy18725.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18725
  namespace: namespace120
spec:
  podSelector:
    matchLabels:
      key6: value21
      key38: value28
      key2: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value14
          key19: value24
          key4: value33
      podSelector:
        matchLabels:
          key4: value9
          key25: value45
          key13: value0
